Archive2/24/32670714670a24/output
main.cpp: In function 'int main()':
main.cpp:14:29: error: invalid use of incomplete type 'std::ofstream {aka class std::basic_ofstream<char>}'
     std::ofstream("file.txt") << format_delimited(columns(m1.size2()) [auto_], '\t', m1.data()) << "\n";
                             ^
In file included from /usr/local/include/c++/4.9.2/bits/localefwd.h:41:0,
                 from /usr/local/include/c++/4.9.2/string:43,
                 from /usr/local/include/c++/4.9.2/random:40,
                 from /usr/local/include/c++/4.9.2/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.2/algorithm:62,
                 from /usr/local/include/boost/numeric/ublas/storage.hpp:16,
                 from /usr/local/include/boost/numeric/ublas/vector.hpp:21,
                 from /usr/local/include/boost/numeric/ublas/matrix.hpp:18,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/iosfwd:114:11: error: declaration of 'std::ofstream {aka class std::basic_ofstream<char>}'
     class basic_ofstream;
           ^
